# rake

./: Cargo.toml  README.md  rake.sh
.cargo/: config.toml
src/: Matrix4x4.rs  camera.rs  framebuffer.rs  main.rs  matrix4x4.rs  object.rs  point.rs  polygon.rs  texture.rs
src/benches/: render_scene_bench.rs
