[package]
name = "rake"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.29"
minifb = "0.25"
pixels = { git = "https://github.com/parasyte/pixels", branch = "main" }
lazy_static = "1.4"
image = "0.25.5"
rayon = "1.10.0"

[profile.release]
opt-level = 3      # Max optimization level
lto = "fat"        # Link-time optimization (LTO)
codegen-units = 1  # Aggressive inlining
panic = "abort"    # No stack unwinding (smaller + faster)
debug = false      # Remove debug symbols
